src/main/java/com/example/loopa/global/error/code/BaseErrorCode.java
package com.example.loopa.global.error.code;

import org.springframework.http.HttpStatus;

public interface BaseErrorCode {

    String getCode();

    String getMessage();

    HttpStatus getStatus();
}
